--- a/pages/4659.html
+++ b/pages/4659.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='lie_theory'><math class='maruku-mathml' display='inline' id='mathml_00b849075dcdbd55ecb5385a394be2b1143b7b02_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie theory</h4>
+<h4 id='lie_theory'><math class='maruku-mathml' display='inline' id='mathml_43910ef5de2ef888a16383caa8e5ed506228ad8b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/infinity-Lie+theory'>∞-Lie theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometry</a>)</p>
@@ -577,7 +577,7 @@ margin-left: 0em;
 
 <h2 id='examples'>Examples</h2>
 
-<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_00b849075dcdbd55ecb5385a394be2b1143b7b02_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
+<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_43910ef5de2ef888a16383caa8e5ed506228ad8b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
 
 <ul>
 <li>
@@ -603,7 +603,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_groups'><math class='maruku-mathml' display='inline' id='mathml_00b849075dcdbd55ecb5385a394be2b1143b7b02_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
+<h3 id='lie_groups'><math class='maruku-mathml' display='inline' id='mathml_43910ef5de2ef888a16383caa8e5ed506228ad8b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
 
 <ul>
 <li>
@@ -645,7 +645,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_00b849075dcdbd55ecb5385a394be2b1143b7b02_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
+<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_43910ef5de2ef888a16383caa8e5ed506228ad8b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
 
 <ul>
 <li>
@@ -683,7 +683,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_00b849075dcdbd55ecb5385a394be2b1143b7b02_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
+<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_43910ef5de2ef888a16383caa8e5ed506228ad8b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
 
 <ul>
 <li>
@@ -744,14 +744,14 @@ margin-left: 0em;
 
 <p>Every semisimple Lie algebra is a <a class='existingWikiWord' href='/nlab/show/reductive+Lie+algebra'>reductive Lie algebra</a>.</p>
 
-<p>A Lie algebra <math class='maruku-mathml' display='inline' id='mathml_00b849075dcdbd55ecb5385a394be2b1143b7b02_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g}</annotation></semantics></math> is semisimple precisely if the <a class='existingWikiWord' href='/nlab/show/Killing+form'>Killing form</a> <a class='existingWikiWord' href='/nlab/show/invariant+polynomial'>invariant polynomial</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_00b849075dcdbd55ecb5385a394be2b1143b7b02_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>⟩</mo><mo>≔</mo><mi>tr</mi><mo stretchy='false'>(</mo><msub><mi>ad</mi> <mi>x</mi></msub><mo>∘</mo><msub><mi>ad</mi> <mi>y</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<p>A Lie algebra <math class='maruku-mathml' display='inline' id='mathml_43910ef5de2ef888a16383caa8e5ed506228ad8b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g}</annotation></semantics></math> is semisimple precisely if the <a class='existingWikiWord' href='/nlab/show/Killing+form'>Killing form</a> <a class='existingWikiWord' href='/nlab/show/invariant+polynomial'>invariant polynomial</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_43910ef5de2ef888a16383caa8e5ed506228ad8b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>⟩</mo><mo>≔</mo><mi>tr</mi><mo stretchy='false'>(</mo><msub><mi>ad</mi> <mi>x</mi></msub><mo>∘</mo><msub><mi>ad</mi> <mi>y</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   \langle x,y \rangle \coloneqq tr (ad_x \circ ad_y)
 
 </annotation></semantics></math></div>
 <p>is non-degenerate as a <a class='existingWikiWord' href='/nlab/show/bilinear+form'>bilinear form</a>.</p>
 
-<p>The corresponding cocycle <math class='maruku-mathml' display='inline' id='mathml_00b849075dcdbd55ecb5385a394be2b1143b7b02_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo stretchy='false'>[</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>]</mo><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle -,[-,-]\rangle</annotation></semantics></math> in <a class='existingWikiWord' href='/nlab/show/Lie+algebra+cohomology'>Lie algebra cohomology</a> is the one that classifies the <a class='existingWikiWord' href='/nlab/show/String+Lie+2-algebra'>string Lie 2-algebra</a>-extension of <math class='maruku-mathml' display='inline' id='mathml_00b849075dcdbd55ecb5385a394be2b1143b7b02_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g}</annotation></semantics></math>.</p>
+<p>The corresponding cocycle <math class='maruku-mathml' display='inline' id='mathml_43910ef5de2ef888a16383caa8e5ed506228ad8b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo stretchy='false'>[</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>]</mo><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle -,[-,-]\rangle</annotation></semantics></math> in <a class='existingWikiWord' href='/nlab/show/Lie+algebra+cohomology'>Lie algebra cohomology</a> is the one that classifies the <a class='existingWikiWord' href='/nlab/show/String+Lie+2-algebra'>string Lie 2-algebra</a>-extension of <math class='maruku-mathml' display='inline' id='mathml_43910ef5de2ef888a16383caa8e5ed506228ad8b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g}</annotation></semantics></math>.</p>
 
 <h2 id='classification'>Classification</h2>
 
@@ -759,7 +759,15 @@ margin-left: 0em;
 
 <h2 id='related_concepts'>Related concepts</h2>
 
+<ul>
+<li>
 <p>An infinite-dimensional generalization of semisimple Lie algebras are <a class='existingWikiWord' href='/nlab/show/Kac-Moody+algebra'>Kac-Moody Lie algebras</a>.</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/exceptional+Lie+algebra'>exceptional Lie algebra</a></p>
+</li>
+</ul>
 
 <h2 id='references'>References</h2>
 
@@ -779,14 +787,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 18, 2017 09:53:51 
+  Revised on November 21, 2017 14:32:27 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (194.210.177.32)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/semisimple+Lie+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/semisimple+Lie+algebra/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/semisimple+Lie+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/semisimple+Lie+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/semisimple+Lie+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/semisimple+Lie+algebra/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/semisimple+Lie+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/semisimple+Lie+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
