--- a/pages/4786.html
+++ b/pages/4786.html
@@ -510,7 +510,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='lie_theory'><math class='maruku-mathml' display='inline' id='mathml_75399de5f5da28da6f190e94ad7cef4c3714a773_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie theory</h4>
+<h4 id='lie_theory'><math class='maruku-mathml' display='inline' id='mathml_a99d2f44d32f4ffdd77de6db871292ea83e37515_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/infinity-Lie+theory'>∞-Lie theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometry</a>)</p>
@@ -775,7 +775,7 @@ margin-left: 0em;
 
 <h2 id='examples'>Examples</h2>
 
-<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_75399de5f5da28da6f190e94ad7cef4c3714a773_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
+<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_a99d2f44d32f4ffdd77de6db871292ea83e37515_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
 
 <ul>
 <li>
@@ -801,7 +801,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_groups_2'><math class='maruku-mathml' display='inline' id='mathml_75399de5f5da28da6f190e94ad7cef4c3714a773_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
+<h3 id='lie_groups_2'><math class='maruku-mathml' display='inline' id='mathml_a99d2f44d32f4ffdd77de6db871292ea83e37515_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
 
 <ul>
 <li>
@@ -843,7 +843,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_75399de5f5da28da6f190e94ad7cef4c3714a773_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
+<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_a99d2f44d32f4ffdd77de6db871292ea83e37515_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
 
 <ul>
 <li>
@@ -881,7 +881,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_75399de5f5da28da6f190e94ad7cef4c3714a773_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
+<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_a99d2f44d32f4ffdd77de6db871292ea83e37515_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
 
 <ul>
 <li>
@@ -948,6 +948,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/exceptional+Lie+algebra'>exceptional Lie algebra</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/exceptional+geometry'>exceptional geometry</a>, <a class='existingWikiWord' href='/nlab/show/exceptional+generalized+geometry'>exceptional generalized geometry</a></p>
 </li>
 
@@ -988,13 +992,17 @@ margin-left: 0em;
 <li>
 <p>J. R. Faulkner, J. C. Ferrar, <em>Exceptional Lie algebras and related algebraic and geometric structures, (<a class='existingWikiWord' href='/nlab/files/FaulknerFerrar.pdf' title='pdf'>pdf</a>)</em></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/John+Baez'>John Baez</a>, <em><a href='http://math.ucr.edu/home/baez/octonions/node13.html'>Exceptional Lie algebras</a></em>, chapter 4 in <em>The Octonions</em>, Bull. Amer. Math. Soc. 39 (2002), 145-205. (<a href='http://math.ucr.edu/home/baez/octonions/octonions.html'>web</a>)</p>
+</li>
 </ul>
 
-<p>Geometric constructions of exceptional Lie algebras are discussed in</p>
+<p>Geometric constructions of <a class='existingWikiWord' href='/nlab/show/exceptional+Lie+algebra'>exceptional Lie algebras</a> are discussed in</p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Jos%C3%A9+Figueroa-O%E2%80%99Farrill'>José Figueroa-O’Farrill</a>, <em>A geometric construction of the exceptional Lie algebras F4 and E8</em> (<a href='http://arxiv.org/abs/0706.2829'>arXiv:0706.2829</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Jos%C3%A9+Figueroa-O%E2%80%99Farrill'>José Figueroa-O&#39;Farrill</a>, <em>A geometric construction of the exceptional Lie algebras F4 and E8</em> (<a href='http://arxiv.org/abs/0706.2829'>arXiv:0706.2829</a>)</p>
 </li>
 
 <li>
@@ -1014,14 +1022,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 25, 2016 11:28:37 
+  Revised on November 21, 2017 14:41:13 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (193.136.135.42)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/exceptional+Lie+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exceptional+Lie+group/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/exceptional+Lie+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exceptional+Lie+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/exceptional+Lie+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exceptional+Lie+group/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/exceptional+Lie+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exceptional+Lie+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
