--- a/pages/16737.html
+++ b/pages/16737.html
@@ -973,13 +973,13 @@ margin-left: 0em;
 <p>and</p>
 
 <blockquote>
-<p>The Exceptional Algebras are most unique and beautiful among Lie Algebras, and no one should be surprised if Nature uses them.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/exceptional+Lie+algebra'>Exceptional Algebras</a> are most unique and beautiful among <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie Algebras</a>, and no one should be surprised if Nature uses them.</p>
 </blockquote>
 
-<p><a href='#Witten02a'>Witten 02a</a>, in the context of <a class='existingWikiWord' href='/nlab/show/M-theory+on+G2-manifolds'>M-theory on G2-manifolds</a> says:</p>
+<p><a href='#Witten02a'>Witten 02a</a>, in the context of <a class='existingWikiWord' href='/nlab/show/M-theory+on+G2-manifolds'>M-theory on G2-manifolds</a> says, with regard to the <a class='existingWikiWord' href='/nlab/show/exceptional+Lie+group'>exceptional Lie group</a> <a class='existingWikiWord' href='/nlab/show/G2'>G2</a>:</p>
 
 <blockquote>
-<p>arise in compactifying from eleven to four dimensions on a compact seven-manifold <math class='maruku-mathml' display='inline' id='mathml_d1884a814da31f0c5d4ca25b4aab73ec12d5c02a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_d1884a814da31f0c5d4ca25b4aab73ec12d5c02a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-holonomy. This seems like an interesting starting point for making a model of the real world, which is certainly exceptional</p>
+<p>arise in <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>compactifying</a> from <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>eleven</a> to four dimensions on a compact seven-manifold <math class='maruku-mathml' display='inline' id='mathml_e24ae6f730723ccfd34e0358b807633622d44ef4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/G2+manifold'>G2-holonomy</a>. This seems like an interesting starting point for making a model of the real world, which is certainly exceptional</p>
 </blockquote>
 
 <p><a href='#Witten02b'>Witten 02b</a>, in the context of <a class='existingWikiWord' href='/nlab/show/GUT'>grand unified theory</a> and <a class='existingWikiWord' href='/nlab/show/heterotic+string+theory'>heterotic string theory</a> says:</p>
@@ -991,19 +991,19 @@ margin-left: 0em;
 <p><a href='#Ramond03'>Ramond 03</a> writes in a context of <a class='existingWikiWord' href='/nlab/show/GUT'>grand unification</a>:</p>
 
 <blockquote>
-<p>In the Lie garden, one also finds five rare flowers, the exceptional algebras: <a class='existingWikiWord' href='/nlab/show/G2'>G2</a>, <a class='existingWikiWord' href='/nlab/show/F4'>F4</a>, <a class='existingWikiWord' href='/nlab/show/E6'>E6</a>, <a class='existingWikiWord' href='/nlab/show/E7'>E7</a> and <a class='existingWikiWord' href='/nlab/show/E8'>E8</a>, their rank indicated by the subscripts. In view of Nature’s fascination with unique structures, they merit further study.</p>
+<p>In the Lie garden, one also finds five rare flowers, the <a class='existingWikiWord' href='/nlab/show/exceptional+Lie+algebra'>exceptional algebras</a>: <a class='existingWikiWord' href='/nlab/show/G2'>G2</a>, <a class='existingWikiWord' href='/nlab/show/F4'>F4</a>, <a class='existingWikiWord' href='/nlab/show/E6'>E6</a>, <a class='existingWikiWord' href='/nlab/show/E7'>E7</a> and <a class='existingWikiWord' href='/nlab/show/E8'>E8</a>, their rank indicated by the subscripts. In view of Nature’s fascination with unique structures, they merit further study.</p>
 </blockquote>
 
 <p><a href='#Boya03'>Boya 03</a> writes in view of the various occurences of the <a class='existingWikiWord' href='/nlab/show/octonion'>octonions</a> in <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a>:</p>
 
 <blockquote>
-<p>If the current M-theory is a <em>unique theory</em>, one should expect it to make use of singular, non-generic mathematical structures. Now it is known that many of the special objects in mathematics are related to octonions, and therefore it is not surprising that this putative <em>theory-of-everything</em> should display geometric and algebraic structures derived from this unique non-associative division algebra.</p>
+<p>If the current <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> is a <em>unique theory</em>, one should expect it to make use of singular, non-generic mathematical structures. Now it is known that many of the special objects in mathematics are related to <a class='existingWikiWord' href='/nlab/show/octonion'>octonions</a>, and therefore it is not surprising that this putative <em>theory-of-everything</em> should display geometric and algebraic structures derived from this unique non-associative <a class='existingWikiWord' href='/nlab/show/normed+division+algebra'>division algebra</a>.</p>
 </blockquote>
 
 <p><a href='#Moore14'>Moore 14</a> writes, in a survey of the state of <a class='existingWikiWord' href='/nlab/show/mathematical+physics'>mathematical physics</a> applied to fundamental high energy physics (“Physical Mathematics”):</p>
 
 <blockquote>
-<p>it must be said that much of Physical Mathematics has a predilection for special, sporadic, and exceptional structures. <math class='maruku-mathml' display='inline' id='mathml_d1884a814da31f0c5d4ca25b4aab73ec12d5c02a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>…<math class='maruku-mathml' display='inline' id='mathml_d1884a814da31f0c5d4ca25b4aab73ec12d5c02a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> I cannot forecast what stormy weather our field is destined to endure, but I can confidently forecast abundant <a class='existingWikiWord' href='/nlab/show/Moonshine'>moonshine</a> in the years ahead. (section 11 “Exceptional structures”)</p>
+<p>it must be said that much of Physical Mathematics has a predilection for special, sporadic, and exceptional structures. <math class='maruku-mathml' display='inline' id='mathml_e24ae6f730723ccfd34e0358b807633622d44ef4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>…<math class='maruku-mathml' display='inline' id='mathml_e24ae6f730723ccfd34e0358b807633622d44ef4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> I cannot forecast what stormy weather our field is destined to endure, but I can confidently forecast abundant <a class='existingWikiWord' href='/nlab/show/Moonshine'>moonshine</a> in the years ahead. (section 11 “Exceptional structures”)</p>
 </blockquote>
 
 <p>A related comment in the context of <a class='existingWikiWord' href='/nlab/show/F-theory'>F-theory</a> <a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a> <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenology</a> requiring a point with <a class='existingWikiWord' href='/nlab/show/ADE+classification'>E-type</a> symmetry is in (<a href='#Vafa15'>Vafa 15, slide 11</a>):</p>
@@ -1046,7 +1046,7 @@ margin-left: 0em;
 </li>
 
 <li id='Witten02a'>
-<p><a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Deconstruction, <math class='maruku-mathml' display='inline' id='mathml_d1884a814da31f0c5d4ca25b4aab73ec12d5c02a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math> Holonomy, and Doublet-Triplet Splitting</em>, (<a href='http://arxiv.org/abs/hep-ph/0201018'>arXiv:hep-ph/0201018</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Deconstruction, <math class='maruku-mathml' display='inline' id='mathml_e24ae6f730723ccfd34e0358b807633622d44ef4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math> Holonomy, and Doublet-Triplet Splitting</em>, (<a href='http://arxiv.org/abs/hep-ph/0201018'>arXiv:hep-ph/0201018</a>)</p>
 </li>
 
 <li id='Witten02b'>
@@ -1072,14 +1072,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 13, 2017 04:36:28 
+  Revised on November 21, 2017 14:43:46 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (83.208.22.80)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/universal+exceptionalism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/universal+exceptionalism/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/universal+exceptionalism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/universal+exceptionalism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/universal+exceptionalism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/universal+exceptionalism/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/universal+exceptionalism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/universal+exceptionalism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
