--- a/pages/18481.html
+++ b/pages/18481.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      empty 165 in nLab
+      reflexive set in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      empty 165
+      reflexive set
   </h1>
 
 
@@ -308,26 +308,32 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><div class='property'> category: <a class='category_link' href='/nlab/list/empty'>empty</a></div></p>
+    <h1 id='reflexive_sets'>Reflexive sets</h1>
+
+<p>In <a class='existingWikiWord' href='/nlab/show/material+set+theory'>material set theory</a>, a <strong>reflexive set</strong> is a set that belongs to itself:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5c5ba262da6a81a5c50be395ea96d085275e1220_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>∈</mo><mo stretchy='false'>{</mo><mi>X</mi><mo stretchy='false'>}</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'> X \in \{X\} .</annotation></semantics></math></div>
+<p>Equivalently, <math class='maruku-mathml' display='inline' id='mathml_5c5ba262da6a81a5c50be395ea96d085275e1220_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is reflexive iff it equals its <a class='existingWikiWord' href='/nlab/show/successor'>successor</a> <math class='maruku-mathml' display='inline' id='mathml_5c5ba262da6a81a5c50be395ea96d085275e1220_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>∪</mo><mo stretchy='false'>{</mo><mi>X</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>X \cup \{X\}</annotation></semantics></math>.</p>
+
+<p><span class='newWikiWord'>!redirect reflexive set<a href='/nlab/new/%21redirect+reflexive+set'>?</a></span> <span class='newWikiWord'>!redirect reflexive sets<a href='/nlab/new/%21redirect+reflexive+sets'>?</a></span></p>
 </div>
 
 <div class="revisedby">
-  Revised on July 23, 2017 14:55:14 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (207.207.127.206)
+  Revised on November 21, 2017 14:59:49 
+  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
+  (64.89.52.24)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/empty+165" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/empty+165/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/empty+165" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/empty+165" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/reflexive+set" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/reflexive+set/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/reflexive+set" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/reflexive+set" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/empty+165" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/reflexive+set" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/empty+165" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/reflexive+set" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/empty+165" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/reflexive+set" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
