--- a/pages/18481.html
+++ b/pages/18481.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -311,14 +311,16 @@ margin-left: 0em;
     <h1 id='reflexive_sets'>Reflexive sets</h1>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/material+set+theory'>material set theory</a>, a <strong>reflexive set</strong> is a set that belongs to itself:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5c5ba262da6a81a5c50be395ea96d085275e1220_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>∈</mo><mo stretchy='false'>{</mo><mi>X</mi><mo stretchy='false'>}</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'> X \in \{X\} .</annotation></semantics></math></div>
-<p>Equivalently, <math class='maruku-mathml' display='inline' id='mathml_5c5ba262da6a81a5c50be395ea96d085275e1220_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is reflexive iff it equals its <a class='existingWikiWord' href='/nlab/show/successor'>successor</a> <math class='maruku-mathml' display='inline' id='mathml_5c5ba262da6a81a5c50be395ea96d085275e1220_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>∪</mo><mo stretchy='false'>{</mo><mi>X</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>X \cup \{X\}</annotation></semantics></math>.</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a99f6ea1096ba1a4271aea4555b005d9d94eb014_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>∈</mo><mo stretchy='false'>{</mo><mi>X</mi><mo stretchy='false'>}</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'> X \in \{X\} .</annotation></semantics></math></div>
+<p>Equivalently, <math class='maruku-mathml' display='inline' id='mathml_a99f6ea1096ba1a4271aea4555b005d9d94eb014_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is reflexive iff it equals its <a class='existingWikiWord' href='/nlab/show/successor'>successor</a> <math class='maruku-mathml' display='inline' id='mathml_a99f6ea1096ba1a4271aea4555b005d9d94eb014_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>∪</mo><mo stretchy='false'>{</mo><mi>X</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>X \cup \{X\}</annotation></semantics></math>.</p>
 
-<p><span class='newWikiWord'>!redirect reflexive set<a href='/nlab/new/%21redirect+reflexive+set'>?</a></span> <span class='newWikiWord'>!redirect reflexive sets<a href='/nlab/new/%21redirect+reflexive+sets'>?</a></span></p>
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November 21, 2017 14:59:49 
+  Revised on November 21, 2017 15:00:06 
   by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
   (64.89.52.24)
 </div>
