--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,25 +308,77 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_76649c82e6d8b8106a4c09f2709e01aff9a7760a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mfrac><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mi>p</mi></msup></mrow></mfrac><mo>∫</mo><mfrac><mn>1</mn><mrow><mn>2</mn><mi>ω</mi><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi></mrow></mfrac><mi>sin</mi><mrow><mo>(</mo><mi>ω</mi><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>(</mo><msup><mi>x</mi> <mn>0</mn></msup><mo>−</mo><msup><mi>y</mi> <mn>0</mn></msup><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi><mo>)</mo></mrow><msup><mi>e</mi> <mrow><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>⋅</mo><mo stretchy='false'>(</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo></mrow></msup><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mi>p</mi></msup><mover><mi>k</mi><mo stretchy='false'>→</mo></mover></mrow><annotation encoding='application/x-tex'>
-  \frac{-1}{(2\pi)^p}
-  \int \frac{1}{2 \omega(\vec k)/c}
-  \sin\left( \omega(\vec k)(x^0 - y^0)/c \right)
-  e^{i \vec k \cdot (\vec x - \vec y)}
-  \, d^p \vec k
+    <p>Consider the formula for the <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a> in terms of the mode expansion (eq:CausalPropagatorModeExpansionForKleinGordonOnMinkowskiSpacetime). Since the <a class='existingWikiWord' href='/nlab/show/integrand'>integrand</a> here depends on the <a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a> <math class='maruku-mathml' display='inline' id='mathml_683b4db6d91c8516f76bc8d4197dbaff61773311_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>k</mi><mo stretchy='false'>→</mo></mover></mrow><annotation encoding='application/x-tex'>\vec k</annotation></semantics></math> only via its <a class='existingWikiWord' href='/nlab/show/norm'>norm</a> <math class='maruku-mathml' display='inline' id='mathml_683b4db6d91c8516f76bc8d4197dbaff61773311_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow></mrow><annotation encoding='application/x-tex'>{\vert \vec k\vert}</annotation></semantics></math> and the <a class='existingWikiWord' href='/nlab/show/angle'>angle</a> <math class='maruku-mathml' display='inline' id='mathml_683b4db6d91c8516f76bc8d4197dbaff61773311_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>θ</mi></mrow><annotation encoding='application/x-tex'>\theta</annotation></semantics></math> it makes with the given <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <a class='existingWikiWord' href='/nlab/show/vector'>vector</a> via</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_683b4db6d91c8516f76bc8d4197dbaff61773311_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>⋅</mo><mo stretchy='false'>(</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mspace width='thinmathspace'></mspace><mrow><mo stretchy='false'>|</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mspace width='thinmathspace'></mspace><mi>cos</mi><mo stretchy='false'>(</mo><mi>θ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  \vec k \cdot (\vec x - \vec y)
+  \;=\;
+  {\vert \vec k\vert} \, {\vert \vec x\vert} \, \cos(\theta)
+
+</annotation></semantics></math></div>
+<p>we may express the <a class='existingWikiWord' href='/nlab/show/integral'>integration</a> in terms of <a class='existingWikiWord' href='/nlab/show/polar+coordinates'>polar coordinates</a> as follws:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_683b4db6d91c8516f76bc8d4197dbaff61773311_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><msub><mi>Δ</mi> <mi>S</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mfrac><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mi>p</mi></msup></mrow></mfrac><mo>∫</mo><mfrac><mn>1</mn><mrow><mn>2</mn><mi>ω</mi><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi></mrow></mfrac><mi>sin</mi><mrow><mo>(</mo><mi>ω</mi><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>(</mo><msup><mi>x</mi> <mn>0</mn></msup><mo>−</mo><msup><mi>y</mi> <mn>0</mn></msup><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi><mo>)</mo></mrow><msup><mi>e</mi> <mrow><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>⋅</mo><mo stretchy='false'>(</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo></mrow></msup><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mi>p</mi></msup><mover><mi>k</mi><mo stretchy='false'>→</mo></mover></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mfrac><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>vol</mi> <mrow><msup><mi>S</mi> <mrow><mi>p</mi><mo>−</mo><mn>2</mn></mrow></msup></mrow></msub><mo stretchy='false'>)</mo></mrow><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mi>p</mi></msup></mrow></mfrac><munder><mo>∫</mo><mrow><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mo>∈</mo><msub><mi>ℝ</mi> <mrow><mo>≥</mo><mn>0</mn></mrow></msub></mrow></munder><munder><mo>∫</mo><mrow><mi>θ</mi><mo>∈</mo><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mi>π</mi><mo stretchy='false'>]</mo></mrow></munder><mfrac><mn>1</mn><mrow><mi>ω</mi><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi></mrow></mfrac><mi>sin</mi><mrow><mo>(</mo><mi>ω</mi><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>(</mo><msup><mi>x</mi> <mn>0</mn></msup><mo>−</mo><msup><mi>y</mi> <mn>0</mn></msup><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi><mo>)</mo></mrow><msup><mi>e</mi> <mrow><mi>i</mi><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mrow><mo stretchy='false'>|</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mi>cos</mi><mo stretchy='false'>(</mo><mi>θ</mi><mo stretchy='false'>)</mo></mrow></msup><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mo stretchy='false'>(</mo><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mi>sin</mi><mo stretchy='false'>(</mo><mi>θ</mi><mo stretchy='false'>)</mo><msup><mo stretchy='false'>)</mo> <mrow><mi>p</mi><mo>−</mo><mn>2</mn></mrow></msup><mspace width='thinmathspace'></mspace><mi>d</mi><mi>θ</mi><mo>∧</mo><mi>d</mi><mi>r</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+    \Delta_S(x - y)
+    &amp; =
+    \frac{-1}{(2\pi)^p}
+    \int \frac{1}{2 \omega(\vec k)/c}
+    \sin\left( \omega(\vec k)(x^0 - y^0)/c \right)
+    e^{i \vec k \cdot (\vec x - \vec y)}
+    \, d^p \vec k
+    \\
+    &amp; =
+    \frac{- vol_{S^{p-2}})}{(2\pi)^p}
+    \underset{{\vert \vec k\vert} \in \mathbb{R}_{\geq 0}}{\int}
+    \underset{ \theta \in [0,\pi] }{\int}
+    \frac{ 1 }{ \omega(\vec k)/c }
+    \sin\left( \omega(\vec k) (x^0 - y^0) /c \right)
+    e^{ i {\vert \vec k\vert} {\vert \vec x - \vec y\vert} \cos(\theta) }
+    {\vert \vec k\vert} ({\vert \vec k\vert} \sin(\theta))^{p-2}
+    \,
+    d \theta
+    \wedge
+    d r
+  \end{aligned}
+
+</annotation></semantics></math></div>
+<p>We specialize further computation now to the case that the <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> is <math class='maruku-mathml' display='inline' id='mathml_683b4db6d91c8516f76bc8d4197dbaff61773311_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>+</mo><mn>1</mn><mo>=</mo><mn>3</mn><mo>+</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>p + 1 = 3 + 1</annotation></semantics></math>, in which case the above becomes</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_683b4db6d91c8516f76bc8d4197dbaff61773311_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><msub><mi>Δ</mi> <mi>S</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mfrac><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mi>p</mi><mo>−</mo><mn>1</mn></mrow></msup></mrow></mfrac><munder><mo>∫</mo><mrow><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mo>∈</mo><msub><mi>ℝ</mi> <mrow><mo>≥</mo><mn>0</mn></mrow></msub></mrow></munder><mfrac><mrow><msup><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow> <mn>2</mn></msup></mrow><mrow><mi>ω</mi><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi></mrow></mfrac><mi>sin</mi><mrow><mo>(</mo><mi>ω</mi><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>(</mo><msup><mi>x</mi> <mn>0</mn></msup><mo>−</mo><msup><mi>y</mi> <mn>0</mn></msup><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi><mo>)</mo></mrow><munder><munder><mrow><munder><mo>∫</mo><mrow><mi>cos</mi><mo stretchy='false'>(</mo><mi>θ</mi><mo stretchy='false'>)</mo><mo>∈</mo><mo stretchy='false'>[</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>]</mo></mrow></munder><msup><mi>e</mi> <mrow><mi>i</mi><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mrow><mo stretchy='false'>|</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mi>cos</mi><mo stretchy='false'>(</mo><mi>θ</mi><mo stretchy='false'>)</mo></mrow></msup><mi>d</mi><mi>cos</mi><mo stretchy='false'>(</mo><mi>θ</mi><mo stretchy='false'>)</mo></mrow><mo>⏟</mo></munder><mrow><mo>=</mo><msubsup><mrow><mo>[</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mrow><mi>i</mi><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mspace width='thinmathspace'></mspace><mrow><mo stretchy='false'>|</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow></mrow></mfrac></mstyle><msup><mi>e</mi> <mrow><mi>i</mi><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mspace width='thinmathspace'></mspace><mrow><mo stretchy='false'>|</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow><mspace width='thinmathspace'></mspace><mi>cos</mi><mo stretchy='false'>(</mo><mi>θ</mi><mo stretchy='false'>)</mo></mrow></msup><mo>]</mo></mrow> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow> <mrow><mo lspace='verythinmathspace' rspace='0em'>+</mo><mn>1</mn></mrow></msubsup></mrow></munder><mo>∧</mo><mi>d</mi><mi>r</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+    \Delta_S(x - y)
+    &amp; =
+    \frac{- 1}{(2\pi)^{p-1}}
+    \underset{{\vert \vec k\vert} \in \mathbb{R}_{\geq 0}}{\int}
+    \frac{ {\vert \vec k \vert}^2 }{ \omega(\vec k)/c }
+    \sin\left( \omega(\vec k) (x^0 - y^0) /c \right)
+    \underset{
+      = 
+     \left[
+        \tfrac{1}{i {\vert \vec k\vert}\, {\vert \vec x - \vec y\vert} } 
+        e^{i {\vert \vec k\vert}\, {\vert \vec x - \vec y\vert}\, \cos(\theta)}  
+     \right]_{-1}^{+1}
+    }{
+    \underbrace{
+    \underset{ \cos(\theta) \in [-1,1] }{\int}
+    e^{ i {\vert \vec k\vert} {\vert \vec x - \vec y\vert} \cos(\theta) }
+    d \cos(\theta)
+    }
+    }
+    \wedge
+    d r
+  \end{aligned}
 
 </annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on November 22, 2017 06:37:55 
+  Revised on November 22, 2017 07:58:45 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (92.76.20.22)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1272" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1272 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1273" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1273 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
